--- a/templates/chat/attack-roll-card.html
+++ b/templates/chat/attack-roll-card.html
@@ -1,47 +1,48 @@
 <form class="roll-card attack-roll-card">
-    <div class="card-title">
-        {{localize weaponTypeKey}} {{localize 'MB.Attack'}}
+  <div class="card-title">
+    {{localize weaponTypeKey}} {{localize 'MB.Attack'}}
+  </div>
+  {{#each items as |item id|}}
+  <div class="item-row">
+    <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+    <span class="item-name">{{item.name}}</span>
+  </div>
+  {{/each}}
+  <div class="attack-roll">
+    <div class="roll-title">
+      <span
+        >{{localize 'MB.Attack'}}: {{attackFormula}} {{localize 'MB.Vs'}}
+        {{localize 'MB.DR'}} {{attackDR}}</span
+      >
     </div>
-    {{#each items as |item id|}}
-        <div class="item-row">
-            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-            <span class="item-name">{{item.name}}</span>
-        </div>
-    {{/each}}
-    <div class="attack-roll">
-        <div class="roll-title">
-            <span>{{localize 'MB.Attack'}}: {{attackFormula}} {{localize 'MB.Vs'}} {{localize 'MB.DR'}} {{attackDR}}</span>
-        </div>
-        <div class="roll-result">
-            <span>{{xtotal attackRoll}}</span>
-        </div>
+    <div class="roll-result">
+      <span>{{xtotal attackRoll}}</span>
     </div>
-    <div class="outcome-text">
-        <span class="attack-outcome">{{attackOutcome}}</span>
+  </div>
+  <div class="outcome-text">
+    <span class="attack-outcome">{{attackOutcome}}</span>
+  </div>
+  {{#if damageRoll}}
+  <div class="damage-roll">
+    <div class="roll-title">
+      <span>{{localize 'MB.Damage'}}: {{damageRoll.formula}}</span>
     </div>
-    {{#if damageRoll}}
-        <div class="damage-roll">
-            <div class="roll-title">
-                <span>{{localize 'MB.Damage'}}: {{damageRoll.formula}}</span>
-            </div>
-            <div class="roll-result">
-                <span>{{xtotal damageRoll}}</span>
-            </div>
-        </div>
-    {{/if}}
-    {{#if targetArmorRoll}}
-        <div class="target-armor-roll">
-            <div class="roll-title">
-                <span>{{localize 'MB.TargetArmor'}}: {{targetArmorRoll.formula}}</span>
-            </div>
-            <div class="roll-result">
-                <span>{{xtotal targetArmorRoll}}</span>
-            </div>
-        </div>
-    {{/if}}
-    {{#if takeDamage}}
-        <div class="outcome-text">
-            <span class="take-damage">{{takeDamage}}</span>
-        </div>
-    {{/if}}
+    <div class="roll-result">
+      <span>{{xtotal damageRoll}}</span>
+    </div>
+  </div>
+  {{/if}} {{#if targetArmorRoll}}
+  <div class="target-armor-roll">
+    <div class="roll-title">
+      <span>{{localize 'MB.TargetArmor'}}: {{targetArmorRoll.formula}}</span>
+    </div>
+    <div class="roll-result">
+      <span>{{xtotal targetArmorRoll}}</span>
+    </div>
+  </div>
+  {{/if}} {{#if takeDamage}}
+  <div class="outcome-text">
+    <span class="take-damage">{{takeDamage}}</span>
+  </div>
+  {{/if}}
 </form>
