--- a/templates/chat/outcome-only-roll-card.html
+++ b/templates/chat/outcome-only-roll-card.html
@@ -1,10 +1,8 @@
 <form class="roll-card">
-    <div class="card-title">
-        {{cardTitle}}
+  <div class="card-title">{{cardTitle}}</div>
+  <div class="test-roll">
+    <div class="outcome-text">
+      <span class="take-damage">{{outcomeText}}</span>
     </div>
-    <div class="test-roll">
-        <div class="outcome-text">
-            <span class="take-damage">{{outcomeText}}</span>
-        </div>        
-    </div>
+  </div>
 </form>
