--- a/templates/chat/outcome-roll-card.html
+++ b/templates/chat/outcome-roll-card.html
@@ -1,18 +1,16 @@
 <form class="roll-card">
-    <div class="card-title">
-        {{cardTitle}}
+  <div class="card-title">{{cardTitle}}</div>
+  <div class="test-roll">
+    <div class="roll-title">
+      <span>{{rollFormula}}</span>
     </div>
-    <div class="test-roll">
-        <div class="roll-title">
-            <span>{{rollFormula}}</span>
-        </div>
-        <div class="roll-result">
-            <span>{{xtotal roll}}</span>
-        </div>
-        {{#if outcomeText}}
-            <div class="outcome-text">
-                <span class="take-damage">{{outcomeText}}</span>
-            </div>
-        {{/if}}
+    <div class="roll-result">
+      <span>{{xtotal roll}}</span>
     </div>
+    {{#if outcomeText}}
+    <div class="outcome-text">
+      <span class="take-damage">{{outcomeText}}</span>
+    </div>
+    {{/if}}
+  </div>
 </form>
