--- a/templates/chat/test-ability-roll-card.html
+++ b/templates/chat/test-ability-roll-card.html
@@ -1,18 +1,16 @@
 <form class="roll-card attack-roll-card">
-    <div class="card-title">
-        {{localize 'MB.Test'}} {{localize abilityKey}}
+  <div class="card-title">{{localize 'MB.Test'}} {{localize abilityKey}}</div>
+  <div class="dr-modifiers">
+    {{#each drModifiers}}
+    <div class="dr-modifier">{{this}}</div>
+    {{/each}}
+  </div>
+  <div class="test-roll">
+    <div class="roll-title">
+      <span>{{displayFormula}}</span>
     </div>
-    <div class="dr-modifiers">
-        {{#each drModifiers}}
-            <div class="dr-modifier">{{this}}</div>
-        {{/each}}
+    <div class="roll-result">
+      <span>{{xtotal abilityRoll}}</span>
     </div>
-    <div class="test-roll">
-        <div class="roll-title">
-            <span>{{displayFormula}}</span>
-        </div>
-        <div class="roll-result">
-            <span>{{xtotal abilityRoll}}</span>
-        </div>
-    </div>
+  </div>
 </form>
