--- a/templates/actor/container-sheet.html
+++ b/templates/actor/container-sheet.html
@@ -1,97 +1,136 @@
 <form class="{{cssClass}} flexcol" autocomplete="off">
-    {{!-- Sheet Header --}}
-    <header class="sheet-header">
-        <div class="header-col1">
-            <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}"/>
-        </div>
-        <div class="header-gutter-col">
-        </div>
-        <div class="header-col2">
-            <div class="name-row">
-                <input class="actor-name container-name" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'MB.Name' }}"/>
+  {{!-- Sheet Header --}}
+  <header class="sheet-header">
+    <div class="header-col1">
+      <img
+        class="profile-img"
+        src="{{actor.img}}"
+        data-edit="img"
+        title="{{actor.name}}"
+      />
+    </div>
+    <div class="header-gutter-col"></div>
+    <div class="header-col2">
+      <div class="name-row">
+        <input
+          class="actor-name container-name"
+          name="name"
+          type="text"
+          value="{{actor.name}}"
+          placeholder="{{ localize 'MB.Name' }}"
+        />
+      </div>
+      <div class="actor-subtitle">
+        <h4 class="actor-type">{{actor.type}}</h4>
+      </div>
+      <div class="holding-row">
+        <span class="stat-label container-label"
+          >{{ localize "MB.ContainerHolding" }}:</span
+        >
+        <span class="stat-value">{{data.data.containerSpace}}</span>
+        /
+        <span class="stat-value">{{data.data.capacity.max}}</span>
+      </div>
+    </div>
+  </header>
+
+  {{!-- Sheet Tab Navigation --}}
+  <nav class="sheet-tabs tabs" data-group="primary">
+    <a class="item" data-tab="description"
+      >{{ localize "MB.TabDescription" }}</a
+    >
+    <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
+    <a class="item" data-tab="contents">{{ localize "MB.TabContents" }}</a>
+  </nav>
+
+  {{!-- Sheet Body --}}
+  <section class="sheet-body">
+    {{!-- Description Tab --}}
+    <div class="tab" data-group="primary" data-tab="description">
+      {{editor content=data.data.description target="data.description"
+      button=true owner=owner editable=true}}
+    </div>
+
+    {{!-- Details Tab --}}
+    <div class="tab" data-group="primary" data-tab="details">
+      <div class="form-group">
+        <label>{{ localize "MB.ItemPrice" }}:</label>
+        <input
+          type="text"
+          name="data.price"
+          value="{{data.data.price}}"
+          placeholder="2"
+          data-dtype="Number"
+        />
+      </div>
+      <div class="form-group">
+        <label>{{ localize "MB.ItemCapacity" }}:</label>
+        <input
+          name="data.capacity.max"
+          type="text"
+          value="{{data.data.capacity.max}}"
+          placeholder="10"
+          data-dtype="Number"
+        />
+      </div>
+    </div>
+
+    {{!-- Contents Tab --}}
+    <div class="tab equipment-tab" data-group="primary" data-tab="contents">
+      <ol class="items-list equipment-list">
+        <li class="items-header flexrow">
+          <h3 class="item-name flexrow">{{localize "MB.Equipment"}}</h3>
+          <div class="item-controls flexrow">
+            <a
+              class="item-control item-create"
+              title='{{localize "MB.ItemCreate"}}'
+            >
+              <i class="fas fa-plus"></i> {{localize "MB.Add"}}
+            </a>
+          </div>
+        </li>
+        <ol class="item-list">
+          {{#each data.data.equipment as |item id|}}
+          <li class="item flexrow" data-item-id="{{item._id}}">
+            <img
+              src="{{item.img}}"
+              title="{{item.name}}"
+              width="24"
+              height="24"
+            />
+            <h4 class="item-name item-edit rollable">
+              {{item.name}} {{#ifEq item.type 'container'}} ({{localize
+              'MB.ContainerHolds'}} {{item.data.capacity}}) {{/ifEq}} {{#ifGt
+              item.data.quantity 1}} ({{item.data.quantity}}) {{/ifGt}}
+            </h4>
+            <div class="item-buttons"></div>
+            <div class="item-controls">
+              {{#ifEq item.type 'misc'}}
+              <a class="item-control item-qty-plus" title="Add Quantity"
+                ><i class="fas fa-plus"></i
+              ></a>
+              &nbsp;
+              <a class="item-control item-qty-minus" title="Subtract Quantity"
+                ><i class="fas fa-minus"></i
+              ></a>
+              &nbsp; {{/ifEq}} {{#if item.data.equippable}}
+              <a
+                class="item-control item-toggle {{item.data.toggleClass}}"
+                title="{{item.data.toggleTitle}}"
+                ><i class="fas fa-shield-alt"></i
+              ></a>
+              {{/if}}
+              <a class="item-control item-edit" title="Edit Item"
+                ><i class="fas fa-edit"></i
+              ></a>
+              <a class="item-control item-delete" title="Delete Item"
+                ><i class="fas fa-trash"></i
+              ></a>
             </div>
-            <div class="actor-subtitle">
-                <h4 class="actor-type">{{actor.type}}</h4>
-            </div>
-            <div class="holding-row">
-                <span class="stat-label container-label">{{ localize "MB.ContainerHolding" }}:</span>
-                <span class="stat-value">{{data.data.containerSpace}}</span>
-                /
-                <span class="stat-value">{{data.data.capacity.max}}</span>    
-            </div>
-        </div>      
-    </header>
-
-    {{!-- Sheet Tab Navigation --}}
-    <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="description">{{ localize "MB.TabDescription" }}</a>
-        <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
-        <a class="item" data-tab="contents">{{ localize "MB.TabContents" }}</a>
-    </nav>
-
-    {{!-- Sheet Body --}}
-    <section class="sheet-body">
-        {{!-- Description Tab --}}
-        <div class="tab" data-group="primary" data-tab="description">
-            {{editor content=data.data.description target="data.description" button=true owner=owner editable=true}}
-        </div>
-
-        {{!-- Details Tab --}}
-        <div class="tab" data-group="primary" data-tab="details">
-            <div class="form-group">
-                <label>{{ localize "MB.ItemPrice" }}:</label>
-                <input type="text" name="data.price" value="{{data.data.price}}" placeholder="2" data-dtype="Number" />
-            </div> 
-            <div class="form-group">
-                <label>{{ localize "MB.ItemCapacity" }}:</label>
-                <input name="data.capacity.max" type="text" value="{{data.data.capacity.max}}" placeholder="10" data-dtype="Number"/>
-            </div>
-        </div>
-
-        {{!-- Contents Tab --}}
-        <div class="tab equipment-tab" data-group="primary" data-tab="contents">
-            <ol class="items-list equipment-list">
-                <li class="items-header flexrow">
-                    <h3 class="item-name flexrow">{{localize "MB.Equipment"}}</h3>
-                    <div class="item-controls flexrow">
-                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
-                            <i class="fas fa-plus"></i> {{localize "MB.Add"}}
-                        </a>
-                    </div>
-                </li>
-                <ol class="item-list">
-                    {{#each data.data.equipment as |item id|}}
-                    <li class="item flexrow" data-item-id="{{item._id}}">
-                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                        <h4 class="item-name item-edit rollable">
-                            {{item.name}}
-                            {{#ifEq item.type 'container'}}
-                              ({{localize 'MB.ContainerHolds'}} {{item.data.capacity}})
-                            {{/ifEq}}
-                            {{#ifGt item.data.quantity 1}}
-                              ({{item.data.quantity}})
-                            {{/ifGt}}
-                        </h4>
-                        <div class="item-buttons">
-                        </div>
-                        <div class="item-controls">
-                            {{#ifEq item.type 'misc'}}
-                                <a class="item-control item-qty-plus" title="Add Quantity"><i class="fas fa-plus"></i></a>
-                                &nbsp;
-                                <a class="item-control item-qty-minus" title="Subtract Quantity"><i class="fas fa-minus"></i></a>
-                                &nbsp;
-                            {{/ifEq}}
-                            {{#if item.data.equippable}}
-                                <a class="item-control item-toggle {{item.data.toggleClass}}" title='{{item.data.toggleTitle}}'><i class="fas fa-shield-alt"></i></a>
-                            {{/if}}
-                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                        </div>
-                    </li>
-                    {{/each}}
-                </ol>
-            </ol>
-
-        </div>
-    </section>
+          </li>
+          {{/each}}
+        </ol>
+      </ol>
+    </div>
+  </section>
 </form>
