--- a/templates/chat/get-better-roll-card.html
+++ b/templates/chat/get-better-roll-card.html
@@ -1,28 +1,26 @@
 <form class="roll-card">
-    <div class="card-title">
-        Get Better
+  <div class="card-title">Get Better</div>
+  <div class="test-roll">
+    <div class="outcome-text">
+      <span class="take-damage">{{hpOutcome}}</span>
     </div>
-    <div class="test-roll">
-        <div class="outcome-text">
-            <span class="take-damage">{{hpOutcome}}</span>
-        </div>
-        <div class="outcome-text">
-            <span class="take-damage">{{strOutcome}}</span>
-        </div>
-        <div class="outcome-text">
-            <span class="take-damage">{{agiOutcome}}</span>
-        </div>
-        <div class="outcome-text">
-            <span class="take-damage">{{preOutcome}}</span>
-        </div>
-        <div class="outcome-text">
-            <span class="take-damage">{{touOutcome}}</span>
-        </div>
-        <div class="roll-title">
-            <span>Left in the debris you find:</span>
-        </div>
-        <div class="outcome-text">
-            <span class="take-damage">{{debrisOutcome}}</span>
-        </div>
+    <div class="outcome-text">
+      <span class="take-damage">{{strOutcome}}</span>
     </div>
+    <div class="outcome-text">
+      <span class="take-damage">{{agiOutcome}}</span>
+    </div>
+    <div class="outcome-text">
+      <span class="take-damage">{{preOutcome}}</span>
+    </div>
+    <div class="outcome-text">
+      <span class="take-damage">{{touOutcome}}</span>
+    </div>
+    <div class="roll-title">
+      <span>Left in the debris you find:</span>
+    </div>
+    <div class="outcome-text">
+      <span class="take-damage">{{debrisOutcome}}</span>
+    </div>
+  </div>
 </form>
