--- a/templates/chat/reaction-roll-card.html
+++ b/templates/chat/reaction-roll-card.html
@@ -1,16 +1,14 @@
 <form class="roll-card reaction-roll-card">
-    <div class="card-title">
-        {{localize 'MB.Reaction'}}
+  <div class="card-title">{{localize 'MB.Reaction'}}</div>
+  <div class="reaction-roll">
+    <div class="roll-title">
+      <span>{{localize 'MB.Reaction'}}: {{reactionRoll.formula}}</span>
     </div>
-    <div class="reaction-roll">
-        <div class="roll-title">
-            <span>{{localize 'MB.Reaction'}}: {{reactionRoll.formula}}</span>
-        </div>
-        <div class="roll-result">
-            <span>{{xtotal reactionRoll}}</span>
-        </div>
-        <div class="reaction-text">
-            {{actor.name}} {{localize 'MB.Is'}} {{reactionText}}
-        </div>
+    <div class="roll-result">
+      <span>{{xtotal reactionRoll}}</span>
     </div>
+    <div class="reaction-text">
+      {{actor.name}} {{localize 'MB.Is'}} {{reactionText}}
+    </div>
+  </div>
 </form>
