--- a/templates/dialog/attack-dialog.html
+++ b/templates/dialog/attack-dialog.html
@@ -1,11 +1,23 @@
 <form class="custom-dialog">
-    <input type="hidden" name="itemid" value="{{itemId}}"/>
-    <div class="form-group">
-      <label>{{localize 'MB.Attack'}} {{localize 'MB.DR'}}:</label>
-      <input type="text" name="attackdr" value="{{attackDR}}" placeholder="12" data-dtype="Number" />
-    </div>     
-    <div class="form-group">
-      <label>{{localize 'MB.TargetArmor'}}:</label>
-      <input type="text" name="targetarmor" value="{{targetArmor}}" placeholder="1d2" data-dtype="String" />
-    </div>    
+  <input type="hidden" name="itemid" value="{{itemId}}" />
+  <div class="form-group">
+    <label>{{localize 'MB.Attack'}} {{localize 'MB.DR'}}:</label>
+    <input
+      type="text"
+      name="attackdr"
+      value="{{attackDR}}"
+      placeholder="12"
+      data-dtype="Number"
+    />
+  </div>
+  <div class="form-group">
+    <label>{{localize 'MB.TargetArmor'}}:</label>
+    <input
+      type="text"
+      name="targetarmor"
+      value="{{targetArmor}}"
+      placeholder="1d2"
+      data-dtype="String"
+    />
+  </div>
 </form>
