--- a/templates/dialog/defend-dialog.html
+++ b/templates/dialog/defend-dialog.html
@@ -1,24 +1,38 @@
 <form class="custom-dialog">
-    <div class="form-group">
-      <label>{{localize 'MB.Defend'}} {{localize 'MB.DR'}}:</label>
-      <input type="text" name="defensebasedr" value="{{defendDR}}" placeholder="12" data-dtype="Number" />
-    </div> 
-    <div class="form-group">
-      <label>{{localize 'MB.Modified'}} {{localize 'MB.DR'}}:</label>
-      <input type="text" class="readonly" name="defensemodifieddr" value="" placeholder="12" readonly />
-    </div> 
-    {{# if drModifiers}}
-      <div class="dr-modifier">
-        (
-        {{#each drModifiers}}
-          {{this}}
-          {{#unless @last}},{{/unless}}
-        {{/each}}
-        )
-      </div>
-    {{/if}}
-    <div class="form-group">
-      <label>{{localize 'MB.IncomingAttack'}}:</label>
-      <input type="text" name="incomingattack" value="{{incomingAttack}}" placeholder="1d6" data-dtype="String" />
-    </div>    
+  <div class="form-group">
+    <label>{{localize 'MB.Defend'}} {{localize 'MB.DR'}}:</label>
+    <input
+      type="text"
+      name="defensebasedr"
+      value="{{defendDR}}"
+      placeholder="12"
+      data-dtype="Number"
+    />
+  </div>
+  <div class="form-group">
+    <label>{{localize 'MB.Modified'}} {{localize 'MB.DR'}}:</label>
+    <input
+      type="text"
+      class="readonly"
+      name="defensemodifieddr"
+      value=""
+      placeholder="12"
+      readonly
+    />
+  </div>
+  {{# if drModifiers}}
+  <div class="dr-modifier">
+    ( {{#each drModifiers}} {{this}} {{#unless @last}},{{/unless}} {{/each}} )
+  </div>
+  {{/if}}
+  <div class="form-group">
+    <label>{{localize 'MB.IncomingAttack'}}:</label>
+    <input
+      type="text"
+      name="incomingattack"
+      value="{{incomingAttack}}"
+      placeholder="1d6"
+      data-dtype="String"
+    />
+  </div>
 </form>
