--- a/templates/dialog/scvm-dialog.html
+++ b/templates/dialog/scvm-dialog.html
@@ -1,27 +1,39 @@
 <form id="scvm-form" class="custom-dialog scvm-dialog">
-    <div class="section">
-        <div class="subtitle">{{localize "MB.ScvmfactoryChooseFromClasses"}}</div>
-        <ul>
-            {{#each this.classes}}
-                <li>
-                    <label><input name="{{this.pack}}" type="checkbox" class="class-checkbox" checked>
-                        <div class="class-name">{{this.name}}</div></label>                    
-                </li>
-            {{/each}}    
-        </ul>
-        <div><a class="toggle-none">{{localize "MB.ScvmfactoryToggleNone"}}</a>&nbsp; / &nbsp;<a class="toggle-all">{{localize "MB.ScvmfactoryToggleAll"}}</a></div>
+  <div class="section">
+    <div class="subtitle">{{localize "MB.ScvmfactoryChooseFromClasses"}}</div>
+    <ul>
+      {{#each this.classes}}
+      <li>
+        <label
+          ><input
+            name="{{this.pack}}"
+            type="checkbox"
+            class="class-checkbox"
+            checked
+          />
+          <div class="class-name">{{this.name}}</div></label
+        >
+      </li>
+      {{/each}}
+    </ul>
+    <div>
+      <a class="toggle-none">{{localize "MB.ScvmfactoryToggleNone"}}</a>&nbsp; /
+      &nbsp;<a class="toggle-all">{{localize "MB.ScvmfactoryToggleAll"}}</a>
     </div>
+  </div>
 
-    {{#if forActor}}
-    <div class="section">
-        <p>
-          {{localize "MB.ScvmfactoryWarning"}}
-        </p>
-    </div>
-    {{/if}}
+  {{#if forActor}}
+  <div class="section">
+    <p>{{localize "MB.ScvmfactoryWarning"}}</p>
+  </div>
+  {{/if}}
 
-    <div class="button-row">
-        <button type="submit" class="button cancel-button" name="cancel" value="1">{{localize "MB.Cancel"}}</button>
-        <button type="submit" class="button scvm-button" name="scvm" value="1">{{localize "MB.ScvmfactoryMakeScvm"}}</button>
-    </div>
+  <div class="button-row">
+    <button type="submit" class="button cancel-button" name="cancel" value="1">
+      {{localize "MB.Cancel"}}
+    </button>
+    <button type="submit" class="button scvm-button" name="scvm" value="1">
+      {{localize "MB.ScvmfactoryMakeScvm"}}
+    </button>
+  </div>
 </form>
