--- a/templates/item/class-sheet.html
+++ b/templates/item/class-sheet.html
@@ -1,100 +1,168 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
+  {{!-- Item Sheet Header --}}
+  <header class="sheet-header flexrow">
+    <img
+      class="profile-img"
+      src="{{item.img}}"
+      title="{{item.name}}"
+      data-edit="img"
+    />
+    <div class="header-details">
+      <h1 class="item-name">
+        <input
+          name="name"
+          type="text"
+          value="{{item.name}}"
+          placeholder="{{ localize 'MB.ItemName' }}"
+        />
+      </h1>
+      <div class="item-subtitle">
+        <h4 class="item-type">{{item.type}}</h4>
+      </div>
+    </div>
+  </header>
 
-    {{!-- Item Sheet Header --}}
-    <header class="sheet-header flexrow">
-        <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img"/>
-        <div class="header-details">
-            <h1 class="item-name">
-                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}"/>
-            </h1>
-            <div class="item-subtitle">
-                <h4 class="item-type">{{item.type}}</h4>
-            </div>
-        </div>
-    </header>
+  {{!-- Sheet Tab Navigation --}}
+  <nav class="sheet-tabs tabs" data-group="primary">
+    <a class="item" data-tab="abilities">{{ localize "MB.Abilities" }}</a>
+    <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
+  </nav>
 
-    {{!-- Sheet Tab Navigation --}}
-    <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="abilities">{{ localize "MB.Abilities" }}</a>
-        <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>        
-    </nav>
+  {{!-- Sheet Body --}}
+  <section class="sheet-body">
+    {{!-- Abilities Tab --}}
+    <div class="tab" data-group="primary" data-tab="abilities">
+      {{editor content=data.data.abilities target="data.abilities" button=true
+      owner=owner editable=true}}
+    </div>
 
-    {{!-- Sheet Body --}}
-    <section class="sheet-body">
-        {{!-- Abilities Tab --}}
-        <div class="tab" data-group="primary" data-tab="abilities">
-            {{editor content=data.data.abilities target="data.abilities" button=true owner=owner editable=true}}               
-        </div>
+    {{!-- Details Tab --}}
+    <div class="tab" data-group="primary" data-tab="details">
+      {{!-- Description --}}
+      <div class="form-group">
+        <label>{{ localize "MB.Description" }}:</label>
+        <textarea name="data.description" rows="8">
+{{data.data.description}}</textarea
+        >
+      </div>
 
-        {{!-- Details Tab --}}
-        <div class="tab" data-group="primary" data-tab="details">
+      <br />
 
-            {{!-- Description --}}
-            <div class="form-group">
-                <label>{{ localize "MB.Description" }}:</label>
-                <textarea name="data.description" rows="8">{{data.data.description}}</textarea>
-            </div>
+      {{!-- Starting silver --}}
+      <div class="form-group">
+        <label>{{ localize "MB.Silver" }}:</label>
+        <input
+          type="text"
+          name="data.startingSilver"
+          value="{{data.data.startingSilver}}"
+          placeholder="2d6*10"
+          data-dtype="String"
+        />
+      </div>
 
-            <br>
+      {{!-- Omen Die --}}
+      <div class="form-group">
+        <label>{{ localize "MB.Omens" }}:</label>
+        <input
+          type="text"
+          name="data.omenDie"
+          value="{{data.data.omenDie}}"
+          placeholder="1d2"
+          data-dtype="String"
+        />
+      </div>
 
-           {{!-- Starting silver --}}
-            <div class="form-group">
-                <label>{{ localize "MB.Silver" }}:</label>
-                <input type="text" name="data.startingSilver" value="{{data.data.startingSilver}}" placeholder="2d6*10" data-dtype="String" />
-            </div>
+      {{!-- Starting hit points --}}
+      <div class="form-group">
+        <label>{{ localize "MB.HitPoints" }}:</label>
+        <input
+          type="text"
+          name="data.startingHitPoints"
+          value="{{data.data.startingHitPoints}}"
+          placeholder="1d8"
+          data-dtype="String"
+        />
+      </div>
 
-            {{!-- Omen Die --}}
-            <div class="form-group">
-                <label>{{ localize "MB.Omens" }}:</label>
-                <input type="text" name="data.omenDie" value="{{data.data.omenDie}}" placeholder="1d2" data-dtype="String" />
-            </div>
+      <br />
 
-            {{!-- Starting hit points --}}
-            <div class="form-group">
-                <label>{{ localize "MB.HitPoints" }}:</label>
-                <input type="text" name="data.startingHitPoints" value="{{data.data.startingHitPoints}}" placeholder="1d8" data-dtype="String" />
-            </div>
+      {{!-- Starting abilities --}}
+      <div class="form-group">
+        <label>{{ localize "MB.AbilityStrength" }}:</label>
+        <input
+          type="text"
+          name="data.startingStrength"
+          value="{{data.data.startingStrength}}"
+          placeholder="3d6"
+          data-dtype="String"
+        />
+      </div>
+      <div class="form-group">
+        <label>{{ localize "MB.AbilityAgility" }}:</label>
+        <input
+          type="text"
+          name="data.startingAgility"
+          value="{{data.data.startingAgility}}"
+          placeholder="3d6"
+          data-dtype="String"
+        />
+      </div>
+      <div class="form-group">
+        <label>{{ localize "MB.AbilityPresence" }}:</label>
+        <input
+          type="text"
+          name="data.startingPresence"
+          value="{{data.data.startingPresence}}"
+          placeholder="3d6"
+          data-dtype="String"
+        />
+      </div>
+      <div class="form-group">
+        <label>{{ localize "MB.AbilityToughness" }}:</label>
+        <input
+          type="text"
+          name="data.startingToughness"
+          value="{{data.data.startingToughness}}"
+          placeholder="3d6"
+          data-dtype="String"
+        />
+      </div>
 
-            <br>
+      <br />
 
-            {{!-- Starting abilities --}}
-            <div class="form-group">
-                <label>{{ localize "MB.AbilityStrength" }}:</label>
-                <input type="text" name="data.startingStrength" value="{{data.data.startingStrength}}" placeholder="3d6" data-dtype="String" />
-            </div>
-            <div class="form-group">
-                <label>{{ localize "MB.AbilityAgility" }}:</label>
-                <input type="text" name="data.startingAgility" value="{{data.data.startingAgility}}" placeholder="3d6" data-dtype="String" />
-            </div>
-            <div class="form-group">
-                <label>{{ localize "MB.AbilityPresence" }}:</label>
-                <input type="text" name="data.startingPresence" value="{{data.data.startingPresence}}" placeholder="3d6" data-dtype="String" />
-            </div>
-            <div class="form-group">
-                <label>{{ localize "MB.AbilityToughness" }}:</label>
-                <input type="text" name="data.startingToughness" value="{{data.data.startingToughness}}" placeholder="3d6" data-dtype="String" />
-            </div>
-
-            <br>
-
-            {{!-- Starting equipment --}}
-            <div class="form-group">
-                <label>{{ localize "MB.WeaponTable" }}:</label>
-                <input type="text" name="data.weaponTableDie" value="{{data.data.weaponTableDie}}" placeholder="1d10" data-dtype="String" />
-            </div>
-            <div class="form-group">
-                <label>{{ localize "MB.ArmorTable" }}:</label>
-                <input type="text" name="data.armorTableDie" value="{{data.data.armorTableDie}}" placeholder="1d4" data-dtype="String" />
-            </div>
-            <div class="form-group">
-                <label>{{ localize "MB.Items" }}:</label>
-                <textarea name="data.startingItems" rows="4">{{data.data.startingItems}}</textarea>
-            </div>
-            <div class="form-group">
-                <label>{{ localize "MB.Rolls" }}:</label>
-                <textarea name="data.startingRolls" rows="4">{{data.data.startingRolls}}</textarea>
-            </div>
-        </div>
-
-    </section>
+      {{!-- Starting equipment --}}
+      <div class="form-group">
+        <label>{{ localize "MB.WeaponTable" }}:</label>
+        <input
+          type="text"
+          name="data.weaponTableDie"
+          value="{{data.data.weaponTableDie}}"
+          placeholder="1d10"
+          data-dtype="String"
+        />
+      </div>
+      <div class="form-group">
+        <label>{{ localize "MB.ArmorTable" }}:</label>
+        <input
+          type="text"
+          name="data.armorTableDie"
+          value="{{data.data.armorTableDie}}"
+          placeholder="1d4"
+          data-dtype="String"
+        />
+      </div>
+      <div class="form-group">
+        <label>{{ localize "MB.Items" }}:</label>
+        <textarea name="data.startingItems" rows="4">
+{{data.data.startingItems}}</textarea
+        >
+      </div>
+      <div class="form-group">
+        <label>{{ localize "MB.Rolls" }}:</label>
+        <textarea name="data.startingRolls" rows="4">
+{{data.data.startingRolls}}</textarea
+        >
+      </div>
+    </div>
+  </section>
 </form>
